objects/EUR_CRM_Fair_Share_Comparison_Item__c.object
<CustomObject>
    <description>Defines products of PR and Competitors for Fair Share Comparisons</description>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipLabel>Fair Share Comparison Items (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Comparison_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality (EU)</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Fair Share Comparison Items (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Comparison_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand (EU)</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Fair Share Comparison Items (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Comparison_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Fair_Share_Comparison__c</fullName>
        <label>Fair Share Comparison (EU)</label>
        <referenceTo>EUR_CRM_Fair_Share_Comparison__c</referenceTo>
        <relationshipLabel>Fair Share Comparison Items (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Comparison_Items_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Competitor_BQS__c</fullName>
        <formula>EUR_CRM_Brand_Quality_Size__r.EUR_CRM_BrandQualitySize_Is_Competitor__c</formula>
        <label>Is Competitor (BQS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Competitor_BQ__c</fullName>
        <formula>EUR_CRM_Brand_Quality__r.EUR_CRM_Quality_Is_Competitor__c</formula>
        <label>Is Competitor (BQ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Competitor_Brand__c</fullName>
        <formula>EUR_CRM_Brand__r.EUR_CRM_Is_Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Competitor (Brand)</label>
        <type>Checkbox</type>
    </fields>
    <label>Fair Share Comparison Item (EU)</label>
    <listViews>
        <fullName>EUR_RU_Fair_Share_Comparison_Items</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Fair_Share_Comparison__c</columns>
        <columns>EUR_CRM_Brand__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Is_Competitor_BQ__c</columns>
        <columns>EUR_CRM_Is_Competitor_Brand__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Fair_Share_Comparison_Item__c.EUR_RU_FSCI_BQ,EUR_CRM_Fair_Share_Comparison_Item__c.EUR_RU_FSCI_BQS,EUR_CRM_Fair_Share_Comparison_Item__c.EUR_RU_FSCI_Brand</value>
        </filters>
        <label>EUR RU Fair Share Comparison Items</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FSCI~{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fair Share Comparison Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_FSCI</fullName>
        <active>true</active>
        <label>EUR BE FSCI</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_FSCI_BQ</fullName>
        <active>true</active>
        <label>EUR PT FSCI BQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_FSCI_BQS</fullName>
        <active>true</active>
        <label>EUR PT FSCI BQS</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_FSCI_Brand</fullName>
        <active>true</active>
        <label>EUR PT FSCI Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_FSCI_BQ</fullName>
        <active>true</active>
        <label>EUR RU FSCI (BQ)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_FSCI_BQS</fullName>
        <active>true</active>
        <label>EUR RU FSCI (BQS)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_FSCI_Brand</fullName>
        <active>true</active>
        <label>EUR RU FSCI (Brand)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>